@@ -188,7 +188,7 @@
       <para>Commercial support for Together Workflow Editor including
       development of project specific extensions or integration into other
       environments and projects is offered by Together Teamsolutions Co., Ltd
-      located in Pattaya/Thailand/Asis (<ulink
+      located in Pattaya/Thailand/Asia (<ulink
       url="mailto: office@together.at">mailto:
       office@together.at</ulink>).</para>
     </sect1>
